--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@jimp/plugin-fisheye": "^0.5.3",
     "@jimp/plugins": "^0.5.3",
     "@jimp/types": "^0.5.3",
+    "event-stream": "^4.0.1",
     "express": "^4.16.3",
     "figlet": "^1.2.1",
     "jimp": "^0.5.3",
